--- a/frontend/src/app/pages/home/home.scss
+++ b/frontend/src/app/pages/home/home.scss
@@ -137,7 +137,7 @@
 
   &__subtitle {
     font-size: var(--font-xl);
-    color: var(--white-alpha-90);
+    color: var(--white);
     margin: 0 0 var(--spacing-6);
     max-width: 32rem;
     line-height: 1.5;
@@ -778,7 +778,7 @@
 
   &__desc {
     font-size: var(--font-base);
-    color: var(--white-alpha-85);
+    color: var(--white);
     margin: 0;
     line-height: 1.5;
 
